fixed hamburger bar so still visible during hover

--- a/css/layout.css
+++ b/css/layout.css
@@ -469,6 +469,10 @@ padding:20px;
 
 	.hamburger{
 		display:block;
+	}
+
+	.hamburger i{
+		display:block;
 		padding-right:10px;
 		padding-left:10px;
 		padding-top:5px;
