--- a/css/style.css
+++ b/css/style.css
@@ -192,12 +192,12 @@ p{
   }
 @media only screen and (max-width:596px){
 
-	.hamburger{
+	.hamburger:link{
 		color:var(--lightest-color);
 		background: transparent;
 		font-size:2em;
 	}
-	.hamburger:hover{
+	.hamburger i:hover{
 		color:var(--darkest-color);
 		background-color: var(--lightest-color);
 	}
